assets/css/memory.css
@import url('https://fonts.googleapis.com/css2?family=Ranchers&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Monda&display=swap');

* {
    box-sizing: border-box;
}

h1,
h2,
h3,
h4 {
    font-family: "Ranchers", sans-serif;
    letter-spacing: 5px;
}

p {
    font-family: "Monda", sans-serif;
}

body {
    margin: 0;
    padding: 0px;
    background: url("../img/snake-background2.jpg") no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}

/*--------- Control buttons ---------*/
.control-container {
    width: 100%;
    height: auto;
    background-color: rgba(0, 0, 0, .8);
    color: #28b213;
    text-align: center;
    padding: 10px;
    margin-left: 0px;
    margin-top: 0px;
}

.music-icon i {
    font-size: 50px;
}

.music-icon i:hover {
    transform: scale(1.3);
    cursor: pointer;
    color: #BD8025;
}

.music-icon {
    margin: 0px 30px 0px 0px;
}

.restart-icon {
    margin: 0px 0px 0px 30px;
}

.restart-icon i {
    font-size: 40px;
    padding-top: 5px;
}

.restart-icon i:hover {
    color: #BD8025;
    transform: scale(1.3);
}

/* --------- Memory Game ------------- */
/* --------- heading -------------------*/
.page-title {
    color: #BD8025;
    font-size: 6em;
    text-align: center;
    text-shadow: 2px 2px black;
}

.game-info {
    font-size: 4em;
    color: #28b213;
    text-shadow: 2px 2px black;
}

.game-info h2 {
    font-size: 1em;
    color: #28b213;
    text-shadow: 2px 2px black;
}

.game-info h2 span {
    color: #34a223;
}

/* --------- Cards -------------------*/
.game-info-container {
    grid-column: 1 / -1;
    display: flex;
    justify-content: space-between;
}

.card {
    position: relative;
    height: 175px;
    width: 125px;
}

div.card {
    background-color: transparent;
    border: none;
}

.game-container {
    display: grid;
    grid-template-columns: repeat(4, auto);
    grid-gap: 10px;
    margin: 50px;
    justify-content: center;
    perspective: 500px;
}

.card:hover {
    cursor: pointer;
}

.card-face {
    position: absolute;
    width: 125px;
    height: 175px;
    display: flex;
    justify-content: center;
    align-items: center;
    overflow: hidden;
    backface-visibility: hidden;
    border-radius: 12px;
    border: 1px solid orange;
    transition: transform 500ms ease-in-out;
}

@keyframes overlay-grow {
    from {
        background-color: rgba(0, 0, 0, 0);
        font-size: 0;
    }

    to {
        background-color: rgba(0, 0, 0, .8);
        font-size: 10em;
    }
}

.visible .card-back {
    transform: rotateY(-180deg);
    width: 125px;
    height: 175px;
}

.visible .card-front {
    transform: rotateY(0);
    width: 125px;
    height: 175px;
}

.card-back {
    background-color: black;
    border-color: orange;
}

.card-front {
    transform: rotateY(180deg);
    overflow: hidden;
}

.card-front img {
    overflow: hidden;
}

/* ---------------- Overlays ---------------*/
.overlay-text {
    display: none;
    position: fixed;
    top: 20%;
    left: 5%;
    right: 5%;
    bottom: 20%;
    justify-content: center;
    align-items: center;
    z-index: 100;
    color: #BD8025;
    font-family: "Ranchers", sans-serif;
    cursor: pointer;
    text-shadow: 2px 2px black;
    text-align: center;
    padding: 20px;
    border-radius: 12px;
}

.overlay-text h1 {
    font-size: 1em;
}

.overlay-text-small {
    text-align: center;
    font-size: .2em;
    font-family: "Monda", sans-serif;
    color: #34a223;
}

.overlay-text.visible {
    display: flex;
    flex-direction: column;
    animation: overlay-grow 500ms forwards;
}

.overlay-text-small i {
    color: yellow;
    font-size: 3em;
}

/*-------  media query -------*/
@media (max-width: 900px) {
    .game-container {
        grid-template-columns: repeat(2, auto);
    }

    .game-info-container {
        flex-direction: column;
        align-items: center;
    }

    /*--- Overlays ---*/
    .overlay-text h1 {
        font-size: .2em;
    }

    .overlay-text-small {
        font-size: .1em;
    }
}

/*-------  Footer -------*/
footer {
    text-align: center;
    position: fixed;
    bottom: 0px;
    background-color: rgba(0, 0, 0, .8);
    width: 100%;
    height: auto;
    padding-top: 5px;
}

footer i {
    color: #28b213;
    font-size: 35px;
    letter-spacing: 30px;
    padding: 10px;
    margin-top: 0;
    align-items: center;
}

footer i:hover {
    color: #BD8025;
    transform: scale(1.1);
}

